--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-iiif",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "express-iiif is Express.js middleware to provide your application with a IIIF server",
   "main": "dist/index.js",
   "scripts": {
@@ -10,7 +10,10 @@
     "dev": "nodemon"
   },
   "keywords": [
-    "iiif"
+    "iiif",
+    "express",
+    "image",
+    "deepzoom"
   ],
   "repository": {
     "type": "git",
