--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
   },
   "license": "BSD-3-Clause",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
     "@types/lodash": "^4.14.202",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "jest": "^29.7.0",
     "nodemon": "^3.0.2",
